:art: Implement review suggestions